[package]
name = "invarch_ink_environment"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"


[dependencies]
ink_primitives = { version = "3.0.1", default-features = false }
ink_metadata = { version = "3.0.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.1", default-features = false }
ink_storage = { version = "3.0.1", default-features = false }
ink_lang = { version = "3.0.1", default-features = false }
ink_prelude = { version = "3.0.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# TODO: Change to the actual git repo.
invarch-runtime-primitives = { path = "../InvArch-Node/runtime-primitives", default-features = false }

[lib]
name = "invarch_ink_environment"
path = "lib.rs"
crate-type = [
  "rlib",
]


[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_lang/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "invarch-runtime-primitives/std"
]
ink-as-dependency = []

[workspace]
members = [
    "example" 
]