[package]
name = "invarch_environment_example"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"


[dependencies]
ink_primitives = { version = "3.0", default-features = false }
ink_metadata = { version = "3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0", default-features = false, features = ["ink-debug"] }
ink_storage = { version = "3.0", default-features = false }
ink_lang = { version = "3.0", default-features = false }
ink_prelude = { version = "3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# TODO: Change to the actual git repo.
invarch-runtime-primitives = { path = "../../InvArch-Node/runtime-primitives", default-features = false }

invarch_ink_environment = { path = "../", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "invarch_environment_example"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "invarch_ink_environment/std"
]
ink-as-dependency = []
